# OpenBT

./: .gitignore  .lycheeignore  .readthedocs.yaml  LICENSE  OpenBTbandsdk.md  README.md  meson.build  typos.toml
.github/: dependabot.yml
Examples/: BART-Model-Mixing-Priors.md
JMLR/: jmlr_mixing_examples.R
Ropenbt/: DESCRIPTION  NAMESPACE
docs/: bibliography_cpp.rst  bibliography_py.rst  conf.py  contributing.rst  developer_environment.rst  documentation.rst  examples_py.rst  examples_r.rst  get_started_cpp.rst  get_started_py.rst  get_started_r.rst  git_workflow.rst  index.rst  latex_macros_base.json  latex_macros_notation.json  references.bib  release_procedure.rst  sphinx_macros.json  tox_usage.rst  versioning.rst
includes/: ambrt.h  amxbrt.h  brt.h  brtfuns.h  crn.h  dinfo.h  mbrt.h  mxbrt.h  psbrt.h  rn.h  sbrt.h  singlebinomial.h  singlepoisson.h  tnorm.h  tree.h  treefuns.h
openbt_pypkg/: MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
openbt_pypkg/src/openbt/: __init__.py  openbtmixing.py  test.py
openbt_pypkg/src/openbt/tests/: test_mixing.py
openbtmixing_pypkg/: setup.py
src/: Makefile.in  aclocal.m4  ambrt.cpp  amxbrt.cpp  brt.cpp  brtfuns.cpp  brtmoves.cpp  cli.cpp  configure  crn.cpp  mbrt.cpp  mixandemulate.cpp  mixandemulatepred.cpp  mixingwts.cpp  mopareto.cpp  mxbrt.cpp  pred.cpp  psbrt.cpp  sbrt.cpp  singlebinomial.cpp  singlepoisson.cpp  sobol.cpp  tnorm.cpp  tree.cpp  treefuns.cpp  vartivity.cpp
subprojects/: README.md  eigen.wrap
tools/: build_openbt_clt.sh  check_flake8_compliance.sh  test_python_installation.py
(+29 files in other folders)
